{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 6196,
  "lineage": "b43130c9-4023-e638-94c6-aecf41e58c4c",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:internet-gateway/igw-0436b4eaff8820f35",
            "id": "igw-0436b4eaff8820f35",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "p-igw"
            },
            "tags_all": {
              "Name": "p-igw"
            },
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087cb4927748e0457",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-0052beed5ab90cf0f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-instance-profile",
            "id": "i-0052beed5ab90cf0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion_key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0557c0f4ecec916da",
            "private_dns": "ip-10-0-1-214.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.214",
            "public_ip": "52.79.146.26",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04bc3c3b094e33335",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0233733ed00ee4a87",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afbe50d6bf74526e"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_instance_profile.k3s_nodes_instance_profile",
            "module.iam.aws_iam_policy.alb_controller",
            "module.iam.aws_iam_policy.bastion_inline_policy",
            "module.iam.aws_iam_role.bastion_role",
            "module.iam.aws_iam_role.k3s_nodes_role",
            "module.iam.aws_iam_role_policy_attachment.alb_to_nodes",
            "module.iam.aws_iam_role_policy_attachment.bastion_policy_attach",
            "module.iam.aws_iam_role_policy_attachment.bastion_ssm_core",
            "module.key.aws_key_pair.bastion_key",
            "module.key.tls_private_key.bastion_key",
            "module.sg.aws_security_group.bastion_sg",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07dc583b21318d8fc",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-0b32d1b57e96fba8c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k3s-nodes-instance-profile",
            "id": "i-0b32d1b57e96fba8c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd992926410cd8b0",
            "private_dns": "ip-10-0-11-111.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.111",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dbb17a2b5d18301b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087b6b9a2fc245c9b",
            "tags": {
              "Name": "kubernetes-master"
            },
            "tags_all": {
              "Name": "kubernetes-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f56bf022a96fb80c"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_instance_profile.k3s_nodes_instance_profile",
            "module.iam.aws_iam_policy.alb_controller",
            "module.iam.aws_iam_policy.bastion_inline_policy",
            "module.iam.aws_iam_role.bastion_role",
            "module.iam.aws_iam_role.k3s_nodes_role",
            "module.iam.aws_iam_role_policy_attachment.alb_to_nodes",
            "module.iam.aws_iam_role_policy_attachment.bastion_policy_attach",
            "module.iam.aws_iam_role_policy_attachment.bastion_ssm_core",
            "module.key.aws_key_pair.ec2_key",
            "module.key.tls_private_key.ec2_key",
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.k3s_master_sg",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0439aa53de3634d96",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-0fd506ae61bf7ce30",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k3s-nodes-instance-profile",
            "id": "i-0fd506ae61bf7ce30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "ec2_key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d79baf16d8123df",
            "private_dns": "ip-10-0-11-187.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.187",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-095d470e10cddf7b7",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087b6b9a2fc245c9b",
            "tags": {
              "Name": "kubernetes-worker"
            },
            "tags_all": {
              "Name": "kubernetes-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a30fc9ca9880fc4"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_instance_profile.k3s_nodes_instance_profile",
            "module.iam.aws_iam_policy.alb_controller",
            "module.iam.aws_iam_policy.bastion_inline_policy",
            "module.iam.aws_iam_role.bastion_role",
            "module.iam.aws_iam_role.k3s_nodes_role",
            "module.iam.aws_iam_role_policy_attachment.alb_to_nodes",
            "module.iam.aws_iam_role_policy_attachment.bastion_policy_attach",
            "module.iam.aws_iam_role_policy_attachment.bastion_ssm_core",
            "module.key.aws_key_pair.ec2_key",
            "module.key.tls_private_key.ec2_key",
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.k3s_worker_sg",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b84b4d5f70df661f",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:elastic-ip/eipalloc-0b84b4d5f70df661f",
            "association_id": "eipassoc-0dd1c4dcfea1ca6ed",
            "domain": "vpc",
            "id": "eipalloc-0b84b4d5f70df661f",
            "instance": "i-027e1fdb44cdb19ba",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ac480412d2bd6d00",
            "private_dns": "ip-10-0-1-69.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.69",
            "public_dns": "ec2-3-39-95-149.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.95.149",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.nat.aws_instance.nat",
            "module.sg.aws_security_group.nat_sg",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01ad0c7a4930f0e43",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-027e1fdb44cdb19ba",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027e1fdb44cdb19ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ac480412d2bd6d00",
            "private_dns": "ip-10-0-1-69.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.69",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-005ba098f64858349",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0233733ed00ee4a87",
            "tags": {
              "Name": "nat-instance"
            },
            "tags_all": {
              "Name": "nat-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b64d178d9309c35"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.nat_sg",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0941ee82ac8f436bd1080289494",
            "instance_id": "i-027e1fdb44cdb19ba",
            "instance_owner_id": "390403881443",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0ac480412d2bd6d00",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0941ee82ac8f436bd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_instance.nat",
            "module.route.aws_route_table.private_rt",
            "module.sg.aws_security_group.nat_sg",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:route-table/rtb-0941ee82ac8f436bd",
            "id": "rtb-0941ee82ac8f436bd",
            "owner_id": "390403881443",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:route-table/rtb-0423100d08aa079ea",
            "id": "rtb-0423100d08aa079ea",
            "owner_id": "390403881443",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0436b4eaff8820f35",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090019c62653b4c24",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0941ee82ac8f436bd",
            "subnet_id": "subnet-087b6b9a2fc245c9b"
          },
          "dependencies": [
            "module.route.aws_route_table.private_rt",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "private-subnet-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08eea510243e34c45",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0941ee82ac8f436bd",
            "subnet_id": "subnet-0dcbc51a381448170"
          },
          "dependencies": [
            "module.route.aws_route_table.private_rt",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9466af01f22cee5",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0423100d08aa079ea",
            "subnet_id": "subnet-0233733ed00ee4a87"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "public-subnet-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee2827732524f942",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0423100d08aa079ea",
            "subnet_id": "subnet-0a8d0881c8a8a5d08"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-0afbe50d6bf74526e",
            "description": "Bastion host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afbe50d6bf74526e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-0f56bf022a96fb80c",
            "description": "Security group for k3s master node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f56bf022a96fb80c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afbe50d6bf74526e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "k3s-master-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k3s-master-sg"
            },
            "tags_all": {
              "Name": "k3s-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-08a30fc9ca9880fc4",
            "description": "Security group for k3s worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a30fc9ca9880fc4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afbe50d6bf74526e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "k3s-worker-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k3s-worker-sg"
            },
            "tags_all": {
              "Name": "k3s-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-04b64d178d9309c35",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b64d178d9309c35",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.12.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "nat-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-0beb9d5f9a082bf01",
            "description": "Security group for RDS (MySQL)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beb9d5f9a082bf01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MySQL from anywhere (DEV ONLY)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_to_worker_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "All traffic from master to worker nodes",
            "from_port": 0,
            "id": "sgrule-772025488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-08a30fc9ca9880fc4",
            "security_group_rule_id": "sgr-044a663c1250c80e0",
            "self": false,
            "source_security_group_id": "sg-0f56bf022a96fb80c",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.k3s_master_sg",
            "module.sg.aws_security_group.k3s_worker_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_to_master_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "All traffic from worker nodes to master",
            "from_port": 0,
            "id": "sgrule-282421482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0f56bf022a96fb80c",
            "security_group_rule_id": "sgr-08a9a2a1830990600",
            "self": false,
            "source_security_group_id": "sg-08a30fc9ca9880fc4",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.k3s_master_sg",
            "module.sg.aws_security_group.k3s_worker_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-087b6b9a2fc245c9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087b6b9a2fc245c9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-a",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-a",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "private-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0dcbc51a381448170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcbc51a381448170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-c",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-c",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0293a631ceaf89eb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0293a631ceaf89eb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "db-subnet-a"
            },
            "tags_all": {
              "Name": "db-subnet-a"
            },
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "db-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0669ba3de97cc38c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0669ba3de97cc38c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "db-subnet-c"
            },
            "tags_all": {
              "Name": "db-subnet-c"
            },
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0233733ed00ee4a87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0233733ed00ee4a87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-a",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-a",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "public-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0a8d0881c8a8a5d08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d0881c8a8a5d08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-c",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-c",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a3df384489793f2f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:vpc/vpc-0a3df384489793f2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067770d87ea0404ba",
            "default_route_table_id": "rtb-089ab461aee1aec41",
            "default_security_group_id": "sg-0db671c0c33822ff2",
            "dhcp_options_id": "dopt-0bb6bf2626d3217a9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3df384489793f2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089ab461aee1aec41",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}